# AIFinanceManager

./: .env.production.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BACKEND-DEPLOYMENT-GUIDE.md  CLAUDE-FASTAPI.md  CLAUDE-FULLSTACK.md  CLAUDE-REACT-NATIVE-EXPO.md  CLAUDE.md  DEPLOYMENT.md  Makefile  PRODUCTION-READY.md  PROJECT-STRUCTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml  frontend-tanstack-query.md  netlify.toml
backend/: .env.example  .env.production.example  .env.production.template  .flake8  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  debug_api_response.py  debug_simple.py  dev_config.py  docker-compose.yml  pyproject.toml  pytest.ini  run.py  seed_db.py  test_budget.py  test_currency.py  test_integration_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_create_goals_table.py  001_initial_integration_tables.py  09f0b8b0a20c_add_belvo_integration_to_expensesource_.py  14ea423e1005_unify_user_preferences_tables.py  15346490e668_add_upload_history_table.py  1765683d89d9_add_integrations_table.py  25447e602986_add_contribution_amount_to_goals.py  3a26208651cb_initial_tables.py  3a923626bd7d_add_category_translations.py  436594e5468e_create_categories_table.py  4781a7876a6e_add_multi_currency_support_to_expenses.py  4d733203b7cf_initial_migration.py  4e5cb0de18e3_add_user_category_preferences.py  57c1690e1bb3_drop_receipt_items_table.py  6163840ce05c_convert_category_type_to_enum_proper.py  71e6c1fba518_add_belvo_integration_source_to_expense_.py  72d655079b79_add_user_authentication.py  75f875f91ea9_translate_category_names_to_spanish.py  763d2855fd0b_add_belvo_integration_source_to_expense_.py  838dc7e9e753_add_categories_table.py  83de3e2d2ac8_recreate_belvo_institutions_table.py  90192de30b17_add_transaction_id_to_expenses_manual.py  9046330b2da2_add_belvo_institutions_table.py  90b397ad8ca4_add_converted_amounts_to_expenses.py  95ce0d158639_remove_integration_metadata_column.py  a2917f377b24_add_color_and_icon_to_goals.py  a59057a97f01_fix_belvo_institution_enum_types.py  a9878ef5d344_update_upload_history_table_with_user_.py  b3d4c5e6f7a8_add_category_type_and_income_categories.py  c0897af8a437_update_category_translations_structure.py  c4d5e6f7a8b9_add_income_goal_links_table.py  cfa2a1b5a332_fix_upload_status_enum_values.py  d372ff9cfea3_make_expense_date_nullable.py  d7ff2fa32bbd_add_users_table.py  dc2269b55032_add_color_and_icon_to_goals.py  ea4c1b445e29_add_user_preferences_table.py  f1dc8500de56_add_server_defaults_to_user_category_.py  f2eb6f4a580b_.py  f40efbd28534_add_user_category_preferences_table.py  (+3 more)
backend/app/: main.py
backend/app/api/: auth.py  belvo.py  budgets.py  expenses.py  insights.py  upload_history.py
backend/app/core/: auth.py  config.py
backend/app/db/: base.py  connection.py  models.py  repositories.py  seed.py
backend/app/models/: auth.py  belvo_institution.py  belvo_responses.py  expense.py  integration.py
backend/app/services/: ai_service.py  belvo_service.py  currency_service.py  plaid_service.py
backend/app/utils/: calculations.py
backend/data/: categories.txt
backend/scripts/: delete_all_data.py  delete_all_data_direct.py  docker-build.sh  format.sh  init.sql  lint.sh  migrate.sh  populate_category_translations.py  translate.py  validate-config.py
backend/src/: config.py  database.py  main.py  scheduler.py
backend/src/auth/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  preferences_models.py  preferences_repository.py  preferences_router.py  preferences_schemas.py  preferences_service.py  repository.py  router.py  schemas.py  service.py
backend/src/budgets/: dependencies.py  goals_dependencies.py  goals_repository.py  goals_router.py  goals_service.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/categories/: __init__.py  constants.py  defaults.py  dependencies.py  models.py  preference_repository.py  preference_service.py  repository.py  router.py  schemas.py  service.py  translation_service.py
backend/tests/: conftest.py  test_ai_parser.py  test_category_preferences.py  test_expenses.py  test_health.py  test_receipts.py
backend/webhook_logs/: all_webhooks.jsonl  error_webhooks.jsonl  processed_webhooks.jsonl
(+342 files in other folders)
